tests/paczka1/fuzzy1/47637783.err
Error in line 13: AueycEwXE A134 21,6
Error in line 20: sTZBh0 S650 77,5
Error in line 26: S650 A830 24,3
Error in line 37: AueycEwXE S107 412,6
